@@ -994,8 +994,17 @@ public class TextAreaPainter extends JComponent implements TabExpander
 			if(end <= s.start || start > s.end)
 				return;
 
-			int selStartScreenLine = textArea.getScreenLineOfOffset(s.start);
-			int selEndScreenLine = textArea.getScreenLineOfOffset(s.end);
+			int selStartScreenLine;
+			if(textArea.displayManager.isLineVisible(s.startLine))
+				selStartScreenLine = textArea.getScreenLineOfOffset(s.start);
+			else
+				selStartScreenLine = -1;
+
+			int selEndScreenLine;
+			if(textArea.displayManager.isLineVisible(s.endLine))
+				selEndScreenLine = textArea.getScreenLineOfOffset(s.end);
+			else
+				selEndScreenLine = -1;
 
 			Buffer buffer = textArea.getBuffer();
 
